# CubicaWorld

./: .clang-uml  .gitignore  CMakeLists.txt  README.md  TODO.md
diagrams/: cubica_class.mmd
include/: BlockType.hpp  Camera.hpp  Chunk.hpp  Constants.hpp  EBO.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp
include/glad/: glad.h
shaders/: basic.frag.glsl  basic.vert.glsl  light.vert.glsl
src/: Camera.cpp  Chunk.cpp  EBO.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp
